# Humidifier

./: CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  idf_component.yml  main.c
main/App/: App_ble.c  App_ble.h  App_key.c  App_key.h  App_led.c  App_led.h  App_wifi.c  App_wifi.h
main/Dri/: Dri_WS2812.c  Dri_WS2812.h  Dri_ble.c  Dri_ble.h  Dri_key.c  Dri_key.h  humidifier.c  humidifier.h  voice_ctrl.c  voice_ctrl.h
